modified for heroku deployment. added logout list item. fixed button for login to admin panel

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,7 +12,7 @@
     <label for="password">Password</label>
     <input class="tInput" type="password" name="password">
     <br>
-    <button type="submit" name="submit">Submit</button>
+    <button class="default-btn" type="submit" name="submit">Submit</button>
   </form>
 </div>
 
