--- a/views/header.ejs
+++ b/views/header.ejs
@@ -33,6 +33,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="/admin">Admin</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/logout">Logout</a>
+              </li>
             <% } %>
           </ul>
         </div>
