--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -4,13 +4,13 @@
   <h1 class="top-pad">Admin Panel</h1>
 </div>
 <div class="div-mid" style="flex-direction:column;">
-  <div class="div-mid blog-body" style="width:25rem; margin:1.5rem 0; align-items:center; border:2px solid; border-radius: 10px; padding:1.5rem;">
+  <div class="div-mid blog-body" style="max-width: 35em; margin:1.5rem 0; align-items:center; border:2px solid; border-radius: 10px; padding:1.5rem;">
     <h3><a style="text-decoration:none;" href="/compose">Compose posts</a></h3>
     <img class="admin-img" src="/pictures/writing.png" alt="writing.png">
     <br>
   </div>
 
-  <div class="div-mid blog-body" style="width:25rem; margin:1.5rem 0; align-items:center; border:2px solid; border-radius: 10px; padding:1.5rem;">
+  <div class="div-mid blog-body" style="max-width: 35em; margin:1.5rem 0; align-items:center; border:2px solid; border-radius: 10px; padding:1.5rem;">
     <h3><a style="text-decoration:none;" href="/update">Update posts</a></h3>
     <img class="admin-img" src="/pictures/refresh.png" alt="refresh.png">
     <br>
