--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,5 +1,6 @@
+</div>
 <button id="dmSwitch" type="button" name="dm-button">
-<span>Dark mode</span>
+<span>DM</span>
 </button>
 <footer class="footer mt-auto py-3 bg-light">
   <div class="container">
