added placeholder for users to test out admin panel functionality

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,10 +7,10 @@
   <form class="" action="/login" method="post">
     <br>
     <label for="username">Email</label>
-    <input class="tInput" type="text" name="username">
+    <input class="tInput" type="text" name="username" placeholder="admin@PaletteJack.com">
     <br>
     <label for="password">Password</label>
-    <input class="tInput" type="password" name="password">
+    <input class="tInput" type="password" name="password" placeholder="AdminPassword">
     <br>
     <button class="default-btn" type="submit" name="submit">Submit</button>
   </form>
